<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddTransaction">

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">



    </android.support.v7.widget.LinearLayoutCompat>

    <RadioGroup
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView3"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="39dp">



        <RadioButton
            android:id="@+id/input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="auto"


            android:onClick="onRadioButtonClicked"
            android:text="@string/Output" />

        <RadioButton
            android:id="@+id/output"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"


            android:text="@string/Input" />

    </RadioGroup>

    <TextView
        android:id="@+id/textView"
        android:layout_width="179dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="11dp"
        android:layout_marginTop="117dp"
        android:text="@string/TransactionType"
        android:textColor="@android:color/black"
        tools:layout_editor_absoluteX="11dp"
        tools:layout_editor_absoluteY="733dp" />

    <android.support.v7.widget.AppCompatSpinner
        android:layout_width="238dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="148dp"
        android:entries="@array/categories"></android.support.v7.widget.AppCompatSpinner>

    <android.inputmethodservice.ExtractEditText
        android:layout_width="216dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView4"
        android:hint="@string/Empty"
        android:inputType="number" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="21dp"
        android:layout_marginTop="182dp"
        android:text="@string/Sum"
        android:textColor="@android:color/black"
        tools:layout_editor_absoluteX="87dp"
        tools:layout_editor_absoluteY="7dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/textView"
        android:layout_marginTop="20dp"
        android:text="@string/Category"
        android:textColor="@android:color/black"
        tools:layout_editor_absoluteX="87dp"
        tools:layout_editor_absoluteY="7dp" />

    <android.inputmethodservice.ExtractEditText
        android:id="@+id/extractEditText"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="121dp"
        android:hint="@string/TextEnter"
        android:inputType="text" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="100dp"
        android:layout_height="20dp"


        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/textView4"
        android:layout_marginBottom="234dp"
        android:text="@string/Description"
        android:textColor="@android:color/black"
        tools:layout_editor_absoluteX="30dp"
        tools:layout_editor_absoluteY="7dp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="214dp"
        android:layout_height="wrap_content"


        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/textView"
        android:layout_marginBottom="94dp"
        android:text="@string/Planing"
        android:textColor="@android:color/black"
        tools:layout_editor_absoluteX="30dp"
        tools:layout_editor_absoluteY="7dp"
        tools:text="Запланированая транзакция" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/textView4"
        android:layout_marginBottom="58dp" />

    <android.inputmethodservice.ExtractEditText
        android:id="@+id/DatePlain"
        android:layout_width="216dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/switch1"
        android:layout_marginTop="-58dp"
        android:inputType="date"
        tools:text="31/12/2018" />
</RelativeLayout>