<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CategoryAdd">

    <TextView
        android:id="@+id/textView9"
        android:layout_width="176dp"
        android:layout_height="wrap_content"


        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="223dp"
        android:text="@string/Description"
        android:textColor="@android:color/black"
        tools:layout_editor_absoluteX="30dp"
        tools:layout_editor_absoluteY="7dp"
        tools:text="Описание категории" />

    <android.inputmethodservice.ExtractEditText
        android:id="@+id/extractEditText3"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="151dp"
        android:hint="@string/TextEnter"
        android:inputType="text" />

    <android.inputmethodservice.ExtractEditText
        android:id="@+id/extractEditText2"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="158dp"
        android:hint="@string/TextEnter"
        android:inputType="text" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="165dp"
        android:layout_height="20dp"


        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="121dp"
        android:text="Название категории"
        android:textColor="@android:color/black"
        tools:layout_editor_absoluteX="30dp"
        tools:layout_editor_absoluteY="7dp"
        tools:text="Название категории" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/textView"
        android:layout_marginTop="20dp"
        android:text="@string/Category"
        android:textColor="@android:color/black"
        tools:layout_editor_absoluteX="87dp"
        tools:layout_editor_absoluteY="7dp"
        tools:text="Категория для:" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="121dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/checkBox2"
        android:text="Доход"
        tools:text="Доход" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="121dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView7"
        android:text="Расход"
        tools:text="Расход" />
</RelativeLayout>